--- a/Translations/German/text-effectPlayer-change.xml
+++ b/Translations/German/text-effectPlayer-change.xml
@@ -163,8 +163,8 @@
 		<Translation>Eliten</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EFFECTPLAYER_LAW_ISOLATIONISM</zType>
-		<Translation>Abschottung</Translation>
+		<zType>TEXT_EFFECTPLAYER_LAW_AUTARKY</zType>
+		<Translation>Autarkie</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_LAW_TRADE_LEAGUE</zType>
