--- a/Translations/German/text-hint-change.xml
+++ b/Translations/German/text-hint-change.xml
@@ -245,4 +245,92 @@
 		<zType>TEXT_HINT_60</zType>
 		<Translation>Hold down [SHIFT] when moving a Unit to assign a multi-turn destination. The Unit will move (to the edge of its Fatigue range) towards that Tile each turn.</Translation>
 	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_61</zType>
+		<Translation>Pressing [ESC] will close the topmost tooltip or window.</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_62</zType>
+		<Translation>Cities gain link(YIELD_DISCONTENT)icon(YIELD_DISCONTENT) over time. When a City's link(YIELD_DISCONTENT)icon(YIELD_DISCONTENT) meter is filled, its overall link(YIELD_DISCONTENT)icon(YIELD_DISCONTENT) Level goes up, which increases link(YIELD_MAINTENANCE)icon(YIELD_MAINTENANCE) and reduces link(YIELD_GROWTH)icon(YIELD_GROWTH).</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_63</zType>
+		<Translation>link(CONCEPT_FAMILY) Classes determine what effects a link(CONCEPT_FAMILY) has on its Cities, as well as what Laws, link(CONCEPT_LUXURY,2), and other conditions keep them happy.</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_64</zType>
+		<Translation>You can reduce link(YIELD_DISCONTENT)icon(YIELD_DISCONTENT) by connecting your cities with link(CONCEPT_ROAD,2), recruiting link(SPECIALISTCLASS_PRIEST,1), and building link(IMPROVEMENTCLASS_BATHS,2).</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_65</zType>
+		<Translation>link(UNIT_SCOUT,2), link(UNIT_SETTLER,2) and link(UNIT_WORKER,2) can Harvest a Resource for a quick supply of Goods.</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_66</zType>
+		<Translation>A Forced March permits a Unit to continue moving this turn when out of Moves, at the cost of int(UNIT_MARCH_COST) link(YIELD_TRAINING)icon(YIELD_TRAINING), and twice as many link(YIELD_ORDERS)icon(YIELD_ORDERS) per additional Move.</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_67</zType>
+		<Translation>A Fatigued Unit can only Move again this turn through a link(CONCEPT_MARCH).</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_68</zType>
+		<Translation>Flank an enemy Unit by attacking it while another friendly Unit is on the opposite side.</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_69</zType>
+		<Translation>Governors can be appointed in Cities with link(IMPROVEMENT_GARRISON_1,1) to provide a boost to Yields.</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_70</zType>
+		<Translation>Shrines provide various benefits, and can help to spread Paganism.</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_71</zType>
+		<Translation>Hold [{0_key}] to hide all Improvements.</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_72</zType>
+		<Translation>Legitimacy comes from achieving link(CONCEPT_AMBITION,2), and acquiring better link(CONCEPT_COGNOMEN,2) (such as link(COGNOMEN_GREAT)). Higher Legitimacy improves Family Opinions, and produces more link(YIELD_ORDERS) per year.</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_73</zType>
+		<Translation>Adopting a link(CONCEPT_STATE_RELIGION) improves that Religion's opinion of your Nation, and also both reduces link(YIELD_DISCONTENT) and enables the recruitment of link(CONCEPT_DISCIPLE,2) in your Cities of that Religion.</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_74</zType>
+		<Translation>Luxuries can be Traded to a City to reduce link(YIELD_DISCONTENT). They can also be Traded to other Nations, link(CONCEPT_TRIBE,2), and link(CONCEPT_FAMILY,2) to improve their Opinion of your Nation.</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_75</zType>
+		<Translation>Tribal Mercenary Units can be hired from link(CONCEPT_TRIBE,2) by Carthage, and by Nations with link(TRAIT_ORATOR_ARCHETYPE) Leaders.</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_76</zType>
+		<Translation>A Disciple can spread your link(CONCEPT_STATE_RELIGION) to other Cities. With the link(LAW_ORTHODOXY) law, they can also purge other Religions from your Cities.</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_77</zType>
+		<Translation>Establishing a Theology grants additional bonuses to a World Religion. Theologies are established using Disciples.</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_78</zType>
+		<Translation>A link(IMPROVEMENT_HAMLET), and its upgrades link(IMPROVEMENT_VILLAGE) and link(IMPROVEMENT_TOWN), if brought into your link(CONCEPT_TRADE_NETWORK), will produce extra link(YIELD_MONEY)icon(YIELD_MONEY).</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_79</zType>
+		<Translation>The link(CONCEPT_TRADE_NETWORK) consists of all Tiles connected to your link(CONCEPT_CAPITAL) City.</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_80</zType>
+		<Translation>Cities and link(IMPROVEMENT_HAMLET,2) can be connected with one another over link(CONCEPT_ROAD,2), rivers, and even open water if they are on the coast, or are connected to a link(IMPROVEMENT_HARBOR).</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_81</zType>
+		<Translation>You can check the link(CONCEPT_TRADE_NETWORK) overlay with the icon(MAP_OVERLAY_NETWORK) button below the mini-map, or the hotkey(HOTKEY_SHOW_TRADE_NETWORK) key.</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HINT_82</zType>
+		<Translation>You can verify that a City is connected by checking that the  icon(CONNECTED) icon is displayed under its City banner.</Translation>
+	</Entry>
 </Root>
