--- a/Translations/German/ModInfo.xml
+++ b/Translations/German/ModInfo.xml
@@ -5,8 +5,8 @@
   <modpicture>1920px-Flag_of_Germany.svg.png</modpicture>
   <author>Revan/ShadowDuke</author>
   <modioID>143281</modioID>
-  <modioFileID>945084</modioFileID>
-  <modversion>for 0.1.48687</modversion>
+  <modioFileID>1197287</modioFileID>
+  <modversion>for 0.1.50948</modversion>
   <homepage>https://github.com/ShadowDuke/OW_GermanPatch</homepage>
   <singlePlayer>true</singlePlayer>
   <multiplayer>true</multiplayer>
